# NTPoly-SPEC

./: CMakeLists.txt  ReadMe.md
Driver/: ACCConcept.f90  CMakeLists.txt  InverseDriver.f90
Source/Fortran/: ErrorModule.F90  PSMatrixModule.F90  ProcessGridModule.F90
Targets/: K.cmake
